Bug 328529 - k3b Bugs
Summary: k3b Bugs
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.80
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords: drkonqi
: 328897 336782 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-08 02:40 UTC by rory.bethaam
Modified: 2016-09-06 07:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.67 KB, text/plain)
2013-12-09 10:45 UTC, John
Details
New crash information added by DrKonqi (6.53 KB, text/plain)
2015-10-15 18:15 UTC, rory.bethaam
Details
New crash information added by DrKonqi (6.53 KB, text/plain)
2015-10-15 18:15 UTC, rory.bethaam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rory.bethaam 2013-12-08 02:40:48 UTC
Application: k3b (2.0.80)
KDE Platform Version: 4.11.2
Qt Version: 4.8.5
Operating System: Linux 3.11.6-4-desktop i686
Distribution: "openSUSE 13.1 (Bottle) (i586)"

-- Information about the crash:
- What I was doing when the application crashed:
I just start K3b to create a iso copy DVD of Ubuntu 13.10 when he shutdown.

The crash can be reproduced every time.

-- Backtrace:
Application: K3b (k3b), signal: Segmentation fault
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0xb1d517c0 (LWP 5569))]

Thread 4 (Thread 0xaf4b3b40 (LWP 5572)):
#0  0xb77b8424 in __kernel_vsyscall ()
#1  0xb3ba488b in read () from /lib/libc.so.6
#2  0xb2e37e3e in ?? () from /usr/lib/libglib-2.0.so.0
#3  0xb2df55eb in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#4  0xb2df5a8a in ?? () from /usr/lib/libglib-2.0.so.0
#5  0xb2df5fdb in g_main_loop_run () from /usr/lib/libglib-2.0.so.0
#6  0xafa6efca in ?? () from /usr/lib/libgio-2.0.so.0
#7  0xb2e1bd5a in ?? () from /usr/lib/libglib-2.0.so.0
#8  0xb3a9407a in start_thread () from /lib/libpthread.so.0
#9  0xb3bb680e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xaeaffb40 (LWP 5573)):
#0  0xb3a9731e in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0xb3bc3b14 in pthread_mutex_unlock () from /lib/libc.so.6
#2  0xb2e38ca0 in g_mutex_unlock () from /usr/lib/libglib-2.0.so.0
#3  0xb2df53a8 in g_main_context_query () from /usr/lib/libglib-2.0.so.0
#4  0xb2df5a56 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0xb2df5c38 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#6  0xb2df5cbe in ?? () from /usr/lib/libglib-2.0.so.0
#7  0xb2e1bd5a in ?? () from /usr/lib/libglib-2.0.so.0
#8  0xb3a9407a in start_thread () from /lib/libpthread.so.0
#9  0xb3bb680e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xac043b40 (LWP 5574)):
#0  0xb77b8424 in __kernel_vsyscall ()
#1  0xb3bc4372 in clock_gettime () from /lib/libc.so.6
#2  0xb497307c in ?? () from /usr/lib/libQtCore.so.4
#3  0xb4a58e82 in ?? () from /usr/lib/libQtCore.so.4
#4  0xb4a5743b in ?? () from /usr/lib/libQtCore.so.4
#5  0xb4a574ca in ?? () from /usr/lib/libQtCore.so.4
#6  0xb2df50d3 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#7  0xb2df59ef in ?? () from /usr/lib/libglib-2.0.so.0
#8  0xb2df5c38 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0xb4a5760f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0xb4a26a03 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0xb4a26d29 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0xb491530d in QThread::exec() () from /usr/lib/libQtCore.so.4
#13 0xb4a06e14 in ?? () from /usr/lib/libQtCore.so.4
#14 0xb4917c5f in ?? () from /usr/lib/libQtCore.so.4
#15 0xb3a9407a in start_thread () from /lib/libpthread.so.0
#16 0xb3bb680e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb1d517c0 (LWP 5569)):
[KCrash Handler]
#6  K3b::Device::from2Byte (d=0xbfead002 <Address 0xbfead002 out of bounds>) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdeviceglobals.cpp:218
#7  0xb7776a26 in K3b::Device::Device::getSupportedWriteSpeedsVia2A (this=this@entry=0x961e430, list=..., mediaType=mediaType@entry=K3b::Device::MEDIA_UNKNOWN) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:3241
#8  0xb777772b in K3b::Device::Device::determineSupportedWriteSpeeds (this=this@entry=0x961e430) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:3200
#9  0xb77778d5 in K3b::Device::Device::determineMaximalWriteSpeed (this=this@entry=0x961e430) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:3151
#10 0xb7778cd2 in K3b::Device::Device::init (this=0x961e430, bCheckWritingModes=bCheckWritingModes@entry=true) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:414
#11 0xb778253f in K3b::Device::DeviceManager::addDevice (this=this@entry=0x946e2f0, device=device@entry=0x961e430) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevicemanager.cpp:372
#12 0xb77829f4 in K3b::Device::DeviceManager::addDevice (this=this@entry=0x946e2f0, solidDevice=...) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevicemanager.cpp:360
#13 0x08196388 in K3b::AppDeviceManager::addDevice (this=0x946e2f0, solidDev=...) at /usr/src/debug/k3b-2.0.80.git20131118/src/k3bappdevicemanager.cpp:120
#14 0xb7781745 in K3b::Device::DeviceManager::checkDevice (this=this@entry=0x946e2f0, dev=...) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevicemanager.cpp:250
#15 0xb77819a6 in K3b::Device::DeviceManager::scanBus (this=0x946e2f0) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevicemanager.cpp:238
#16 0xb75fc975 in K3b::Core::init (this=this@entry=0x9367180) at /usr/src/debug/k3b-2.0.80.git20131118/libk3b/core/k3bcore.cpp:208
#17 0x08154565 in K3b::Application::Core::init (this=0x9367180) at /usr/src/debug/k3b-2.0.80.git20131118/src/k3bapplication.cpp:273
#18 0x08152ec8 in K3b::Application::Core::qt_static_metacall (_o=0xbfead002, _id=0, _a=0x95fda38, _c=<optimized out>) at /usr/src/debug/k3b-2.0.80.git20131118/build/src/k3bapplication.moc:141
#19 0xb4a393da in QMetaCallEvent::placeMetaCall(QObject*) () from /usr/lib/libQtCore.so.4
#20 0xb4a412bb in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#21 0xb3eb24b4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#22 0xb3eb8ee3 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#23 0xb7303cb4 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#24 0xb4a27fba in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#25 0xb4a2b2e5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#26 0xb4a2b80c in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#27 0xb4a57e0e in ?? () from /usr/lib/libQtCore.so.4
#28 0xb2df57ce in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#29 0xb2df5b78 in ?? () from /usr/lib/libglib-2.0.so.0
#30 0xb2df5c38 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#31 0xb4a575ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0xb3f6251e in ?? () from /usr/lib/libQtGui.so.4
#33 0xb4a26a03 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#34 0xb4a26d29 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#35 0xb4a2c4fe in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#36 0xb3eb0944 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#37 0x080824df in main (argc=1, argv=0xbfeaba64) at /usr/src/debug/k3b-2.0.80.git20131118/src/main.cpp:146

Reported using DrKonqi
Comment 1 John 2013-12-09 10:45:35 UTC
Created attachment 84002 [details]
New crash information added by DrKonqi

k3b (2.0.80) on KDE Platform 4.11.2 using Qt 4.8.5

- What I was doing when the application crashed: I downloaded an ISO file and it crashed after maybe 2 seconds of loading. Did this every time.

-- Backtrace (Reduced):
#5  K3b::Device::from2Byte (d=d@entry=0x7fff22b8d002 <Address 0x7fff22b8d002 out of bounds>) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdeviceglobals.cpp:218
#6  0x00007fbcb75763e8 in K3b::Device::Device::getSupportedWriteSpeedsVia2A (this=this@entry=0x2fa9a20, list=..., mediaType=mediaType@entry=K3b::Device::MEDIA_UNKNOWN) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:3241
#7  0x00007fbcb7576e6b in K3b::Device::Device::determineSupportedWriteSpeeds (this=this@entry=0x2fa9a20) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:3200
#8  0x00007fbcb7576fa0 in K3b::Device::Device::determineMaximalWriteSpeed (this=this@entry=0x2fa9a20) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:3151
#9  0x00007fbcb75780cd in K3b::Device::Device::init (this=0x2fa9a20, bCheckWritingModes=bCheckWritingModes@entry=true) at /usr/src/debug/k3b-2.0.80.git20131118/libk3bdevice/k3bdevice.cpp:414
Comment 2 Jekyll Wu 2013-12-17 11:59:51 UTC
*** Bug 328897 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2014-06-28 00:11:20 UTC
*** Bug 336782 has been marked as a duplicate of this bug. ***
Comment 4 Johannes Obermayr 2014-08-15 12:20:52 UTC
Does this happen with k3b from Packman repository?
Please set ($ kdebugdialog --on k3b) and provide information from console ...
Comment 5 rory.bethaam 2015-10-15 18:15:26 UTC
Created attachment 95003 [details]
New crash information added by DrKonqi

k3b (2.0.80) on KDE Platform 4.11.5 using Qt 4.8.5

- What I was doing when the application crashed:
I load K3b, and then, it suddenly crash. I try a lot of time but it the same .

-- Backtrace (Reduced):
#7  K3b::Device::from2Byte (d=0xbfe01002 <Address 0xbfe01002 out of bounds>) at /usr/src/debug/k3b/libk3bdevice/k3bdeviceglobals.cpp:218
#8  0xb5697a26 in K3b::Device::Device::getSupportedWriteSpeedsVia2A (this=this@entry=0x9897bb0, list=..., mediaType=mediaType@entry=K3b::Device::MEDIA_UNKNOWN) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:3254
#9  0xb569872b in K3b::Device::Device::determineSupportedWriteSpeeds (this=this@entry=0x9897bb0) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:3213
#10 0xb56988d5 in K3b::Device::Device::determineMaximalWriteSpeed (this=this@entry=0x9897bb0) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:3164
#11 0xb5699cd2 in K3b::Device::Device::init (this=0x9897bb0, bCheckWritingModes=bCheckWritingModes@entry=true) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:427
Comment 6 rory.bethaam 2015-10-15 18:15:26 UTC
Created attachment 95005 [details]
New crash information added by DrKonqi

k3b (2.0.80) on KDE Platform 4.11.5 using Qt 4.8.5

- What I was doing when the application crashed:
I load K3b, and then, it suddenly crash. I try a lot of time but it the same .

-- Backtrace (Reduced):
#7  K3b::Device::from2Byte (d=0xbfe01002 <Address 0xbfe01002 out of bounds>) at /usr/src/debug/k3b/libk3bdevice/k3bdeviceglobals.cpp:218
#8  0xb5697a26 in K3b::Device::Device::getSupportedWriteSpeedsVia2A (this=this@entry=0x9897bb0, list=..., mediaType=mediaType@entry=K3b::Device::MEDIA_UNKNOWN) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:3254
#9  0xb569872b in K3b::Device::Device::determineSupportedWriteSpeeds (this=this@entry=0x9897bb0) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:3213
#10 0xb56988d5 in K3b::Device::Device::determineMaximalWriteSpeed (this=this@entry=0x9897bb0) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:3164
#11 0xb5699cd2 in K3b::Device::Device::init (this=0x9897bb0, bCheckWritingModes=bCheckWritingModes@entry=true) at /usr/src/debug/k3b/libk3bdevice/k3bdevice.cpp:427
Comment 7 Leslie Zhai 2016-09-06 07:18:36 UTC
Git commit 4c8e704345a75076ef639dd748483512a7c4d52d by Leslie Zhai.
Committed on 06/09/2016 at 07:17.
Pushed by lesliezhai into branch 'master'.

Fix from2Byte *NO* checking nullptr issue.

M  +8    -0    libk3bdevice/k3bdeviceglobals.cpp
M  +9    -0    tests/CMakeLists.txt
A  +34   -0    tests/k3bdeviceglobalstest.cpp     [License: GPL (v2+)]
A  +28   -0    tests/k3bdeviceglobalstest.h     [License: GPL (v2+)]

http://commits.kde.org/k3b/4c8e704345a75076ef639dd748483512a7c4d52d