Fix from2Byte *NO* checking nullptr issue.

BUG: 328529